--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@types/node": "20.5.6",
     "@types/react": "18.2.21",
     "@types/react-dom": "18.2.7",
+    "airbnb-app": "file:",
     "axios": "^1.5.0",
     "bcrypt": "^5.1.1",
     "date-fns": "^2.30.0",
